--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 							<li><a href="pages/career.html">Career</a></li>
 							<li><a href="pages/research.html">Research</a></li>
 							<li><a href="pages/volunteering.html">Volunteering</a></li>
-							<li><a href="pages/travel.html">Travel</a></li>
-							<li><a href="pages/education.html">Education</a></li>
 							<li><a href="pages/awards.html">Awards</a></li>
+							<li><a href="pages/education.html">Education</a></li>
+							<li><a href="pages/travel.html">Travel</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Research Profile</a></li>
+							<li><a href="" class="button primary fit">Research Profile</a></li>
 							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Resume</a></li>
 							<!-- <li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
@@ -179,7 +179,7 @@
 								<li><a href="https://www.instagram.com/chamikasudusinghe" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 2022 Chamika Sudusinghe </li><li>Design Credits: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2023 Chamika Sudusinghe </li><li>Design Credits: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
