--- a/pages/career.html
+++ b/pages/career.html
@@ -28,16 +28,17 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="career.html">Career</a></li>
-							<li><a href="research.html">Research</a></li>
-							<li><a href="volunteering.html">Volunteering</a></li>
-							<li><a href="travel.html">Travel</a></li>
-							<li><a href="education.html">Education</a></li>
-							<li><a href="awards.html">Awards</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="pages/career.html">Career</a></li>
+							<li><a href="pages/research.html">Research</a></li>
+							<li><a href="pages/volunteering.html">Volunteering</a></li>
+							<li><a href="pages/awards.html">Awards</a></li>
+							<li><a href="pages/education.html">Education</a></li>
+							<li><a href="pages/travel.html">Travel</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Resume</a></li>
+							<li><a href="" class="button primary fit">Research Profile</a></li>
+							<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button primary fit">Resume</a></li>
 							<!-- <li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
 					</nav>
@@ -227,7 +228,7 @@
 								<li><a href="https://www.instagram.com/chamikasudusinghe" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Chamika Sudusinghe 2022</li><li>Design Credits: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Chamika Sudusinghe 2023</li><li>Design Credits: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
