--- a/pages/research.html
+++ b/pages/research.html
@@ -69,6 +69,9 @@
 										<h2>Bits, Bytes, and Beyond</h2>
 									</header>
 									<p>Embarking on an exhilarating intellectual odyssey, where the intricate world of coding bits intertwines with data-driven breakthroughs, creates a synergy that propels us into the future. Prepare to be captivated by the allure of exploration and the thrill of revelation, as we delve into uncharted territories. This journey is fueled by meticulous attention to detail, where every line of code and every data point becomes a stepping stone towards innovation.</p>
+									<ul class="actions">
+										<li><a href="" target="_blank" class="button">Research Profile</a></li>
+									</ul>
 								</div>
 							</section>
 
