--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 								<p>Chamika is a PhD student in the Department of Computer Science at the University of Illinois Urbana-Champaign (UIUC), affiliated with the Accelerate Data Intensive Applications through Programming Languages Techniques (ADAPT) research group.</p>
 								<!-- <p>Chamika is a PhD student at the Department of Computer Science, University of Illinois Urbana-Champaign. He received his Bachelor's from the Department of Computer Science and Engineering, University of Moratuwa specializing in Integrated Computer Engineering.</p> -->
 								<ul class="actions">
+									<li><a href="" class="button next scrolly">Research</a></li>
 									<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button next scrolly">Resume</a></li>
 								</ul>
 							</div>
