--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7B5ZD9TMY"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-D7B5ZD9TMY');
+		</script>
 		<title>Chamika Sudusinghe</title>
 		<link rel="shortcut icon" href="images/title.png" type="image/x-icon">
 		<meta charset="utf-8" />
