--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
-										<li> <b>Sep 11, 2023:</b> Selected as <b>the winner</b> of <b>the Region 10 SAC Outstanding Volunteer Award</b> for <b>2023</b>.</li>
+										<li> <b>Sep 11, 2023:</b> Selected as <b>the winner</b> of <b>the Region 10 (Asia-Pacific) SAC Outstanding Volunteer Award</b> for <b>2023</b>.</li>
 										<li> <b>Oct 12, 2022:</b> Selected as <b>the 2nd-Runner up</b> of <b>the ACM SIGBED Student Research Competition</b> at <b>the ES Week 2022</b>.</li>
 										<li> <b>Aug 20, 2022:</b> Reseach work on "Eavesdropping Attack Detection" was accepted in <b>NOCS 2022</b> and <b>IEEE Design & Test</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society</b>.</li>
