news items edited

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<p>Chamika is a PhD student in the Department of Computer Science at the University of Illinois Urbana-Champaign (UIUC), affiliated with the Accelerate Data Intensive Applications through Programming Languages Techniques (ADAPT) research group.</p>
 								<!-- <p>Chamika is a PhD student at the Department of Computer Science, University of Illinois Urbana-Champaign. He received his Bachelor's from the Department of Computer Science and Engineering, University of Moratuwa specializing in Integrated Computer Engineering.</p> -->
 								<ul class="actions">
-									<li><a href="" class="button next scrolly">Research</a></li>
+									<li><a href="research/index.html" class="button next scrolly">Research</a></li>
 									<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button next scrolly">Resume</a></li>
 								</ul>
 							</div>
@@ -136,6 +136,7 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
+										<li> <b>Nov 21, 2022:</b> Reseach work on "Interpretable Predictive Models" was accepted in <b>Applied Soft Computing</b>.</li>
 										<li> <b>Oct 12, 2022:</b> Selected as <b>the 2nd-Runner up</b> of <b>the ACM SIGBED Student Research Competition</b> at <b>the ES Week 2022</b>.</li>
 										<li> <b>Aug 20, 2022:</b> Reseach work on "Eavesdropping Attack Detection" was accepted in <b>NOCS 2022</b> and <b>IEEE Design & Test</b>.</li>
 										<li> <b>Apr 02, 2022:</b> Became <b>the first student</b> to win all the student scholarships and awards by <b>the IEEE Computer Society</b>.</li>
