--- a/pages/research.html
+++ b/pages/research.html
@@ -88,7 +88,7 @@
 												<h4>Aug. 2023 - Present</h4>
 											</header>
 											<p>Developing complex data-driven approaches to accelerate Systems (ML for Systems) and conversely build high performance systems that accelerate complex Machine Learning workloads (Systems for ML).</p>
-											<p>Supervised By: Prof. Charith Mendis</p>
+											<p>Supervised By: <a href="https://charithmendis.com/" target="_blank">Prof. Charith Mendis</a></p>
 											<ul class="actions">
 												<li><a href="https://adapt.cs.illinois.edu/" target="_blank" class="button">ADAPT Lab</a></li>
 											</ul>
@@ -106,7 +106,7 @@
 												<h4>Mar. 2020 - Apr. 2022</h4>
 											</header>
 											<p>Collaborative work with the Embedded Systems Lab of University of Florida on developing learning based countermeasures to secure NoC Architectures from denial-of-service and eavesdropping attacks.</p>
-											<p>Supervised By: Prof. Prabhat Mishra</p>
+											<p>Supervised By: <a href="https://www.cise.ufl.edu/~prabhat/" target="_blank">Prof. Prabhat Mishra</a></p>
 											<ul class="actions">
 												<li><a href="https://www.cise.ufl.edu/research/cad/index.html" target="_blank" class="button">Embedded Systems Lab</a></li>
 											</ul>
@@ -124,7 +124,7 @@
 												<h4>Oct. 2020 - May 2022</h4>
 											</header>
 											<p>Collaborative work with the SAS Innovation Lab of La Trobe University on building interpretable predictive models with context-aware evolutionary learning to handle large datasets.</p>
-											<p>Supervised By: Prof. Damminda Alahakoon</p>
+											<p>Supervised By: <a href="https://scholars.latrobe.edu.au/dalahakoon" target="_blank">Prof. Damminda Alahakoon</a></p>
 											<ul class="actions">
 												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
 											</ul>
@@ -149,7 +149,7 @@
 									<li>
 										<span style="font-weight:350"><b>Building Interpretable Predictive Models with Context-aware Evolutionary Learning</b></span> [<a href=https://www.sciencedirect.com/science/article/abs/pii/S1568494622009036>PDF</a>]<br>
 										Binh Tran, <u>Chamika Sudusinghe</u>, Su Nguyen, Damminda Alahakoon<br>
-										Applied Soft Computing, December, 2022<br>
+										Applied Soft Computing, January, 2023<br>
 										<br>
 									</li>
 									<h3>Conference Publications</h3>
