--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 										<h2><span class="material-symbols-outlined"> feed </span>News Highlights</h2>
 									</header>
 									<ul>
+										<li> <b>Oct 11, 2023:</b> Selected as <b>the winner</b> of <b>the CSSL ICT Student of the Year Award </b> for <b>2022</b> in Sri Lanka.</li>
 										<li> <b>Sep 11, 2023:</b> Selected as <b>the winner</b> of <b>the Region 10 (Asia-Pacific) SAC Outstanding Volunteer Award</b> for <b>2023</b>.</li>
 										<li> <b>Nov 21, 2022:</b> Reseach work on "Interpretable Predictive Models" was accepted in <b>Applied Soft Computing</b>.</li>
 										<li> <b>Oct 12, 2022:</b> Selected as <b>the 2nd-Runner up</b> of <b>the ACM SIGBED Student Research Competition</b> at <b>the ES Week 2022</b>.</li>
