--- a/pages/awards.html
+++ b/pages/awards.html
@@ -75,6 +75,40 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
+									<a href="https://cssl.lk/" class="image">
+										<img src="../images/cssl.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> trophy </span>ICT Student of the Year</h3>
+												<h4>2022 (Undergraduate)</h4>
+											</header>
+											<p>CSSL ICT Awards is an award ceremony conducted with the view of recognizing and motivating those who have served the ICT industry in Sri Lanka. These awards intend to encourage, recognize and celebrate excellence in ICT practice by rewarding the best and the finest of ICT Professionals.</p>
+											<ul class="actions">
+												<li><a href="https://cssl.lk/" target="_blank" class="button">CSSL</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="https://sac.ieeer10.org/outstanding-volunteer-award/" class="image">
+										<img src="../images/ieeer10.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3><span class="material-symbols-outlined"> award_star </span>Outstanding Volunteer Award</h3>
+												<h4>2023 (IEEE Region 10 SAC)</h4>
+											</header>
+											<p>The IEEE Region 10 Student Activities Committee (SAC) Outstanding Volunteer Award is given to an IEEE member of any grade, who has been organizing activities and providing impetus to growth of student involvement for IEEE activities and events.</p>
+											<ul class="actions">
+												<li><a href="https://sac.ieeer10.org/outstanding-volunteer-award/" target="_blank" class="button">R10 SAC</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
 									<a href="https://src.acm.org/winners/2023" class="image">
 										<img src="../images/acm.png" alt="" data-position="center center" />
 									</a>
