--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/cover01.jpg" alt="" />
+										<img src="images/pages/career.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> engineering </span><a href="pages/career.html" class="link">Career</a></h3>
@@ -84,7 +84,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover02.jpg" alt="" />
+										<img src="images/pages/research.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> school </span><a href="pages/research.html" class="link">Research</a></h3>
@@ -93,7 +93,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover02.jpg" alt="" />
+										<img src="images/pages/volunteer.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> group </span><a href="pages/volunteering.html" class="link">Volunteering</a></h3>
@@ -102,7 +102,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover02.jpg" alt="" />
+										<img src="images/pages/awards.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> grade </span><a href="pages/awards.html" class="link">Awards</a></h3>
@@ -111,7 +111,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover01.jpg" alt="" />
+										<img src="images/pages/education.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> book </span><a href="pages/education.html" class="link">Education</a></h3>
@@ -120,7 +120,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/cover01.jpg" alt="" />
+										<img src="images/pages/travel.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><span class="material-symbols-outlined"> public </span><a href="pages/travel.html" class="link">Travel</a></h3>
