--- a/pages/career.html
+++ b/pages/career.html
@@ -91,7 +91,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+								<!--<section>
 									<a href="https://www.nirvanalabs.io/" target="_blank" class="image">
 										<img src="../images/nirvana.png" alt="" data-position="center center" />
 									</a>
@@ -107,7 +107,7 @@
 											</ul>
 										</div>
 									</div>
-								</section>
+								</section>-->
 								<section>
 									<a href="https://wso2.com" target="_blank" class="image">
 										<img src="../images/wso2.png" alt="" data-position="center center" />
