--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="images/title.png" type="image/png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="canonical" href="https://chamika.net/" />
 	<!-- SEO Meta -->
 	<meta name="description" content="Chamika Sudusinghe is a Ph.D. student at the University of Illinois Urbana-Champaign, researching programming languages and data-intensive systems.">
 	<meta name="keywords" content="Chamika Sudusinghe, PhD Student, UIUC, Programming Languages, ADAPT Group, Sparse Accelerators, Computer Science Research">
