--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </header>
             <ul>
 			  <li><b>May 01, 2025:</b> Research work on "ML-based Cost Models for Emerging Sparse Accelerators" was accepted at <b>ICML 202</b>.</li>
-			  <li><b>Jan 01, 2025:</b> Appointed as <b>Vice Chair</b> of <b>IEEE Student Activities Committee (Global)</b>.</li>
+			  <li><b>Jan 01, 2025:</b> Appointed as <b>Vice Chair</b> of <b>IEEE MGA Student Activities Committee (Global)</b>.</li>
 			  <li><b>Apr 04, 2024:</b> Awarded the <b>Graduate Research Fellowship (NSF-GRFP)</b> by the <b>National Science Foundation</b>.</li>
               <li><b>Oct 11, 2023:</b> Selected as <b>the winner</b> of <b>the CSSL ICT Student of the Year Award </b> for <b>2022</b> in Sri Lanka.</li>
               <li><b>Sep 11, 2023:</b> Selected as <b>the winner</b> of <b>the Region 10 (Asia-Pacific) SAC Outstanding Volunteer Award</b> for <b>2023</b>.</li>
