--- a/adapt/people.html
+++ b/adapt/people.html
@@ -14,7 +14,7 @@
 
   <!-- Open Graph (Social Preview) -->
   <meta property="og:title" content="ADAPT @ Illinois – People">
-  <meta property="og:description" content="Explore the members of the ADAPT @ Illinois Research Group: Principal Investigator, PhD students, Masters, Undergraduates, and alumni.">
+  <meta property="og:description" content="Explore the members of the ADAPT @ Illinois Research Group: Principal Investigator (PI), PhD Students, Masters, Undergraduates, and Alumni.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://yourdomain.edu/people.html">
   <meta property="og:image" content="https://yourdomain.edu/assets/adapt-thumbnail.jpg"> <!-- Replace with real image URL -->
