--- a/adapt/people.html
+++ b/adapt/people.html
@@ -16,14 +16,14 @@
   <meta property="og:title" content="ADAPT @ Illinois – People">
   <meta property="og:description" content="Explore the members of the ADAPT @ Illinois Research Group: Principal Investigator (PI), PhD Students, Masters, Undergraduates, and Alumni.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yourdomain.edu/people.html">
-  <meta property="og:image" content="https://yourdomain.edu/assets/adapt-thumbnail.jpg"> <!-- Replace with real image URL -->
+  <meta property="og:url" content="https://adapt.cs.illinois.edu/people.html">
+  <meta property="og:image" content="https://adapt.cs.illinois.edu/assets/adapt-thumbnail.jpg">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ADAPT @ Illinois – People">
   <meta name="twitter:description" content="Meet the ADAPT research group members at UIUC.">
-  <meta name="twitter:image" content="https://yourdomain.edu/assets/adapt-thumbnail.jpg"> <!-- Replace with real image URL -->
+  <meta name="twitter:image" content="https://adapt.cs.illinois.edu/assets/adapt-thumbnail.jpg">
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -73,7 +73,7 @@
   </div>
 
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 border-bottom" aria-label="Main Navigation">
       <div class="container-fluid">
         <a class="navbar-brand fw-bold" href="index.html">ADAPT @ Illinois</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adaptNavbar" aria-controls="adaptNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,7 +103,7 @@
         <div class="col-md-5 col-lg-4">
           <div class="card person-card h-100 shadow-sm text-center" id="person-card-pi">
             <a href="https://charithmendis.com" target="_blank" rel="noopener noreferrer">
-              <img src="members/charith.jpeg" class="card-img-top" alt="Charith Mendis">
+              <img src="members/charith.jpeg" loading="lazy" class="card-img-top" alt="Charith Mendis">
             </a>
             <div class="card-body d-flex flex-column justify-content-between align-items-center">
               <h5 class="card-title mb-2">Charith Mendis</h5>
@@ -116,12 +116,12 @@
 
     <hr class="col-3 col-md-2 my-5" style="margin-top: 4rem !important; margin-bottom: 4rem !important;">
     <section id="phd" aria-labelledby="phd-title">
-      <h2 id="phd-title">PhD Students</h2>
+      <h2 id="phd-title" class="mb-4">PhD Students</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/damitha-sandeepa-lenadora/" target="_blank" rel="noopener noreferrer">
-              <img src="members/damitha.jpg" class="card-img-top" alt="Damitha Lenadora">
+              <img src="members/damitha.jpg" loading="lazy" class="card-img-top" alt="Damitha Lenadora">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -141,7 +141,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://baziotis.cs.illinois.edu" target="_blank" rel="noopener noreferrer">
-              <img src="members/stefanos.jpg" class="card-img-top" alt="Stefanos Baziotis">
+              <img src="members/stefanos.jpg" loading="lazy" class="card-img-top" alt="Stefanos Baziotis">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -161,7 +161,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/avaljot-singh/?originalSubdomain=in" target="_blank" rel="noopener noreferrer">
-              <img src="members/aval.jpg" class="card-img-top" alt="Avaljot Singh">
+              <img src="members/aval.jpg" loading="lazy" class="card-img-top" alt="Avaljot Singh">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -181,7 +181,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://chamika.net/" target="_blank" rel="noopener noreferrer">
-              <img src="members/chamika.jpeg" class="card-img-top" alt="Chamika Sudusinghe">
+              <img src="members/chamika.jpeg" loading="lazy" class="card-img-top" alt="Chamika Sudusinghe">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -201,7 +201,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/devansh-jain-0517461a9" target="_blank" rel="noopener noreferrer">
-              <img src="members/devansh.jpg" class="card-img-top" alt="Devansh Jain">
+              <img src="members/devansh.jpg" loading="lazy" class="card-img-top" alt="Devansh Jain">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -221,7 +221,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://jaiarora0011.github.io/" target="_blank" rel="noopener noreferrer">
-              <img src="members/jai.jpg" class="card-img-top" alt="Jai Arora">
+              <img src="members/jai.jpg" loading="lazy" class="card-img-top" alt="Jai Arora">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -241,7 +241,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://muyan.hu" target="_blank" rel="noopener noreferrer">
-              <img src="members/muyan.jpg" class="card-img-top" alt="Muyan Hu">
+              <img src="members/muyan.jpg" loading="lazy" class="card-img-top" alt="Muyan Hu">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -263,12 +263,12 @@
 
     <hr class="col-3 col-md-2 mb-5">
     <section id="masters" aria-labelledby="masters-title">
-      <h2 id="masters-title">Masters Students</h2>
+      <h2 id="masters-title" class="mb-4">Masters Students</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://tspeterkim.github.io/" target="_blank" rel="noopener noreferrer">
-              <img src="members/peter.jpg" class="card-img-top" alt="Peter Kim">
+              <img src="members/peter.jpg" loading="lazy" class="card-img-top" alt="Peter Kim">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -288,7 +288,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/krutpatel99/" target="_blank" rel="noopener noreferrer">
-              <img src="members/krut.jpeg" class="card-img-top" alt="Krut Patel">
+              <img src="members/krut.jpeg" loading="lazy" class="card-img-top" alt="Krut Patel">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -308,7 +308,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/akashpardeshi/" target="_blank" rel="noopener noreferrer">
-              <img src="members/akash.jpeg" class="card-img-top" alt="Akash Pardeshi">
+              <img src="members/akash.jpeg" loading="lazy" class="card-img-top" alt="Akash Pardeshi">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -329,12 +329,12 @@
     </section>
     <hr class="col-3 col-md-2 mb-5">
     <section id="undergrad" aria-labelledby="undergrad-title">
-      <h2 id="undergrad-title">Undergraduate Students</h2>
+      <h2 id="undergrad-title" class="mb-4">Undergraduate Students</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/alex-broihier88/" target="_blank" rel="noopener noreferrer">
-              <img src="members/alex.jpeg" class="card-img-top" alt="Alex Broihier">
+              <img src="members/alex.jpeg" loading="lazy" class="card-img-top" alt="Alex Broihier">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -354,7 +354,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="" target="_blank" rel="noopener noreferrer">
-              <img src="members/default.jpg" class="card-img-top" alt="Andy Luo">
+              <img src="members/default.jpg" loading="lazy" class="card-img-top" alt="Andy Luo">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -374,7 +374,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="http://linkedin.com/in/dhruv-sundar/" target="_blank" rel="noopener noreferrer">
-              <img src="members/dhruv.jpeg" class="card-img-top" alt="Dhruv Sundararaman">
+              <img src="members/dhruv.jpeg" loading="lazy" class="card-img-top" alt="Dhruv Sundararaman">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -394,7 +394,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/emily-hsieh-6323bb23b/" target="_blank" rel="noopener noreferrer">
-              <img src="members/emily.jpeg" class="card-img-top" alt="Emily Hsieh">
+              <img src="members/emily.jpeg" loading="lazy" class="card-img-top" alt="Emily Hsieh">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -414,7 +414,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/ethan-sirois-24814a251/" target="_blank" rel="noopener noreferrer">
-              <img src="members/ethan.jpeg" class="card-img-top" alt="Ethan Sirois">
+              <img src="members/ethan.jpeg" loading="lazy" class="card-img-top" alt="Ethan Sirois">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -434,7 +434,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/kaustubh-khulbe-b97320208/" target="_blank" rel="noopener noreferrer">
-              <img src="members/khulbe.jpeg" class="card-img-top" alt="Kaustubh Khulbe">
+              <img src="members/khulbe.jpeg" loading="lazy" class="card-img-top" alt="Kaustubh Khulbe">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -454,7 +454,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/avaljot-singh/?originalSubdomain=in" target="_blank" rel="noopener noreferrer">
-              <img src="members/default.jpg" class="card-img-top" alt="Marco Frigo">
+              <img src="members/default.jpg" loading="lazy" class="card-img-top" alt="Marco Frigo">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -474,7 +474,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/max-gendeh/" target="_blank" rel="noopener noreferrer">
-              <img src="members/max.jpeg" class="card-img-top" alt="Max Gendeh">
+              <img src="members/max.jpeg" loading="lazy" class="card-img-top" alt="Max Gendeh">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -494,7 +494,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/nikhiljayakumar-/" target="_blank" rel="noopener noreferrer">
-              <img src="members/nikhil.jpeg" class="card-img-top" alt="Nikhil Jayakumar">
+              <img src="members/nikhil.jpeg" loading="lazy" class="card-img-top" alt="Nikhil Jayakumar">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -514,7 +514,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://github.com/singhrayan" target="_blank" rel="noopener noreferrer">
-              <img src="members/rayan.jpeg" class="card-img-top" alt="Rayan Singh">
+              <img src="members/rayan.jpeg" loading="lazy" class="card-img-top" alt="Rayan Singh">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -534,7 +534,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="" target="_blank" rel="noopener noreferrer">
-              <img src="members/default.jpg" class="card-img-top" alt="Zhihao Wan">
+              <img src="members/default.jpg" loading="lazy" class="card-img-top" alt="Zhihao Wang">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -556,12 +556,12 @@
 
     <hr class="col-3 col-md-2 mb-5">
     <section id="alumni" aria-labelledby="alumni-title">
-      <h2 id="alumni-title">Alumni</h2>
+      <h2 id="alumni-title" class="mb-4">Alumni</h2>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/yufengwang05/" target="_blank" rel="noopener noreferrer">
-              <img src="members/yufeng.jpeg" class="card-img-top" alt="Yufeng Wang">
+              <img src="members/yufeng.jpeg" loading="lazy" class="card-img-top" alt="Yufeng Wang">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -591,7 +591,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/tianfan-xu-367069240/" target="_blank" rel="noopener noreferrer">
-              <img src="members/tianfan.jpg" class="card-img-top" alt="Tianfan Xu">
+              <img src="members/tianfan.jpg" loading="lazy" class="card-img-top" alt="Tianfan Xu">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -621,7 +621,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://www.linkedin.com/in/yy28/" target="_blank" rel="noopener noreferrer">
-              <img src="members/yuenming.jpeg" class="card-img-top" alt="Yueming Yuan">
+              <img src="members/yuenming.jpeg" loading="lazy" class="card-img-top" alt="Yueming Yuan">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -651,7 +651,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://wy-go.github.io/" target="_blank" rel="noopener noreferrer">
-              <img src="members/wanyu.jpg" class="card-img-top" alt="Wanyu Zhao">
+              <img src="members/wanyu.jpg" loading="lazy" class="card-img-top" alt="Wanyu Zhao">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
@@ -681,7 +681,7 @@
         <div class="col">
           <div class="card person-card h-100 shadow-sm" id="person-card">
             <a href="https://geyuhao.github.io/" target="_blank" rel="noopener noreferrer">
-              <img src="members/yuhao.jpg" class="card-img-top" alt="Yuhao Ge">
+              <img src="members/yuhao.jpg" loading="lazy" class="card-img-top" alt="Yuhao Ge">
             </a>
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
