--- a/adapt/people.html
+++ b/adapt/people.html
@@ -97,7 +97,7 @@
     </nav>
 
   <main>
-    <h2 class="mt-5 mb-4">Principal Investigator</h2>
+    <h2 class="mt-5 mb-4">Principal Investigator (PI)</h2>
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-md-5 col-lg-4">
