fixed research content

--- a/pages/research.html
+++ b/pages/research.html
@@ -123,7 +123,7 @@
 												<h3><span class="material-symbols-outlined"> analytics </span>Interpretable Predictive Modeling</h3>
 												<h4>Oct. 2020 - May 2022</h4>
 											</header>
-											<p>Collaborative work with the SAS Innovation Lab of La Trobe University on building interpretable predictive models with context-aware evolutionary learning to handle large datasets.</p>
+											<p>Collaborative work with the Centre for Data Analytics and Cognition (CDAC) of La Trobe University on building interpretable predictive models with context-aware evolutionary learning to handle large datasets.</p>
 											<p>Supervised By: <a href="https://scholars.latrobe.edu.au/dalahakoon" target="_blank">Prof. Damminda Alahakoon</a></p>
 											<ul class="actions">
 												<li><a href="https://www.latrobe.edu.au/cdac" target="_blank" class="button">Centre for Data Analytics</a></li>
@@ -153,6 +153,12 @@
 										<br>
 									</li>
 									<h3>Conference Publications</h3>
+									<li>
+										<span style="font-weight:350"><b>COGNATE: Acceleration of Sparse Tensor Programs on Emerging Hardware using Transfer Learning</b></span> [<a href=https://arxiv.org/abs/2506.00424>PDF</a>]<br>
+										<u>Chamika Sudusinghe</u>, Gerasimos Gerogiannis , Damitha Lenadora , Charles Block , Josep Torrellas , and Charith Mendis<br>
+										In Forty-second International Conference on Machine Learning (ICML), 2025<br>
+										<br>
+									</li>
 									<li>
 										<span style="font-weight:350"><b>Denial-of-Service Attack Detection using Machine Learning in Network-on-Chip Architectures</b></span> [<a href=https://ieeexplore.ieee.org/document/9634932>PDF</a>]<br>
 										<u>Chamika Sudusinghe</u>, Subodha Charles, Prabhat Mishra<br>
