--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 			<div class="bio-text">
 				<h1>Chamika Sudusinghe</h1>
 				<p>
-				Chamika is a Ph.D. student in the Siebel School of Computing and Data Science at the University of Illinois Urbana-Champaign (UIUC),
-				affiliated with the Accelerating Data-Intensive Applications through Programming Languages Techniques (ADAPT) group.
+				Chamika is a Ph.D. student in the Siebel School of Computing and Data Science at the University of Illinois Urbana-Champaign (UIUC), affiliated with the ADAPT group led by Prof. Charith Mendis.
 				</p>
 				<ul class="actions">
 				<li><a href="https://chamika2.web.illinois.edu/" class="button next scrolly">Research Profile</a></li>
