--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 				Chamika is a Ph.D. student in the Siebel School of Computing and Data Science at the University of Illinois Urbana-Champaign (UIUC), affiliated with the ADAPT group led by Prof. Charith Mendis.
 				</p>
 				<ul class="actions">
-				<li><a href="https://chamika2.web.illinois.edu/" class="button next scrolly">Research</a></li>
-				<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button next scrolly">Resume</a></li>
+				<li><a href="https://chamika2.web.illinois.edu/" class="button next scrolly" target="_blank" rel="noopener noreferrer">Research</a></li>
+				<li><a href="https://drive.google.com/file/d/1T4QTYiJ9sFn_CmDDMzyq055rQ0R38WPo/view?usp=sharing" class="button next scrolly" target="_blank" rel="noopener noreferrer">Resume</a></li>
 				</ul>
 			</div>
 			</div>
